  . Fixed bug #80811 (Function exec without $output but with $restult_code
    parameter crashes). (Nikita)
  . Fixed bug #80814 (threaded mod_php won't load on FreeBSD: No space
    available for static Thread Local Storage). (Dmitry)

- Dba:
  . Fixed bug #80817 (dba_popen() may cause segfault during RSHUTDOWN). (cmb)

- IMAP:
  . Fixed bug #80800 (imap_open() fails when the flags parameter includes
    CL_EXPUNGE). (girgias)

- Intl:
  . Fixed bug #80763 (msgfmt_format() does not accept DateTime references).
    (cmb)

- Libxml:
  . Fixed bug #51903 (simplexml_load_file() doesn't use HTTP headers). (cmb)

- MySQLnd:
  . Fixed bug #80837 (Calling stmt_store_result after fetch doesn't throw an
    error). (Kamil Tekiela)

- Opcache:
  . Fixed bug #80786 (PHP crash using JIT). (Nikita)
  . Fixed bug #80782 (DASM_S_RANGE_VREG on PHP_INT_MIN-1). (Dmitry)

- PCRE:
  . Fixed bug #80866 (preg_split ignores limit flag when pattern with \K has
    0-width fullstring match). (Kamil Tekiela)

- Session:
  . Fixed bug #80774 (session_name() problem with backslash). (cmb)

- Standard:
  . Fixed bug #80771 (phpinfo(INFO_CREDITS) displays nothing in CLI). (cmb)
  . Fixed bug #78719 (http wrapper silently ignores long Location headers).
    (cmb)
  . Fixed bug #80838 (HTTP wrapper waits for HTTP 1 response after HTTP 101).
    (manuelm)

- Zip:
  . Fixed bug #80825 (ZipArchive::isCompressionMethodSupported does not exist).
    (cmb)

18 Feb 2021, PHP 8.0.3

- Core:
  . Fixed #80706 (mail(): Headers after Bcc headers may be ignored). (cmb)

- DOM:
  . Fixed bug #80600 (DOMChildNode::remove() doesn't work on CharacterData
    nodes). (beberlei)

- Gettext:
  . Fixed bug #53251 (bindtextdomain with null dir doesn't return old value).
    (cmb)

- MySQLnd:
  . Fixed bug #78680 (mysqlnd's mysql_clear_password does not transmit
    null-terminated password). (Daniel Black)
  . Fixed bug #80713 (SegFault when disabling ATTR_EMULATE_PREPARES and
    MySQL 8.0). (Nikita)

- MySQLi: