@@ -12,6 +12,10 @@ PHP                                                                        NEWS
 - Dba:
   . Fixed bug #80817 (dba_popen() may cause segfault during RSHUTDOWN). (cmb)
 
+- FFI:
+  . Fixed bug #80847 (CData structs with fields of type struct can't be passed
+    as C function argument). (Nickolas Daniel da Silva, Dmitry)
+
 - IMAP:
   . Fixed bug #80800 (imap_open() fails when the flags parameter includes
     CL_EXPUNGE). (girgias)
